// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MovieListItemCollapsed correctly with buttons 1`] = `
<div
  className="list-item list-item--hover-effect movie-item"
  onClick={[Function]}
>
  <ReactImageFallback
    alt="poster image for Before Sunset"
    className="movie-item__poster movie-item__poster--small"
    fallbackImage="/images/default_poster.png"
    initialImage="/images/loader.gif"
    src="https://image.tmdb.org/t/p/w92/gycdE1ARByGQcK4fYR2mgpU6OO.jpg"
  />
  <div
    className="movie-item__info--small"
  >
    <h3
      className="movie-item__title"
    >
      Before Sunset
    </h3>
    <div
      className="movie-item__meta"
    >
      <span>
        2004
      </span>
      <span />
      <span>
         m
      </span>
      <span>
        7.8
        /10
      </span>
    </div>
  </div>
  <button
    key=".0"
  />
  <button
    key=".1"
  />
</div>
`;

exports[`should render MovieListItemCollapsed correctly with no buttons 1`] = `
<div
  className="list-item list-item--hover-effect movie-item"
  onClick={[Function]}
>
  <ReactImageFallback
    alt="poster image for Before Sunset"
    className="movie-item__poster movie-item__poster--small"
    fallbackImage="/images/default_poster.png"
    initialImage="/images/loader.gif"
    src="https://image.tmdb.org/t/p/w92/gycdE1ARByGQcK4fYR2mgpU6OO.jpg"
  />
  <div
    className="movie-item__info--small"
  >
    <h3
      className="movie-item__title"
    >
      Before Sunset
    </h3>
    <div
      className="movie-item__meta"
    >
      <span>
        2004
      </span>
      <span />
      <span>
         m
      </span>
      <span>
        7.8
        /10
      </span>
    </div>
  </div>
</div>
`;
